CMAKE_MINIMUM_REQUIRED( VERSION 3.3 )

PROJECT( ${CPP_WALLET_LIB_NAME} )

FILE(GLOB SOURCES *.cpp)
file(GLOB HEADERS *.h)

SET(GENERATED_PROTO_FILES
   ${BS_STORAGE_PROTO_SOURCES}
   ${BS_STORAGE_PROTO_HEADERS}
   )

INCLUDE_DIRECTORIES( ${PATH_TO_GENERATED} )

INCLUDE_DIRECTORIES( ${BS_STORAGE_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )

ADD_LIBRARY( ${CPP_WALLET_LIB_NAME} ${SOURCES} ${HEADERS} ${GENERATED_PROTO_FILES})
TARGET_LINK_LIBRARIES(${CPP_WALLET_LIB_NAME}
   ${CRYPTO_LIB_NAME}
   ${LIBBTC_LIB}
   ${MPIR_LIB}
   ${OS_SPECIFIC_LIBS}
   ${COMMON_LIB_NAME}
   Qt5::Core
)
