CMAKE_MINIMUM_REQUIRED( VERSION 3.3 )

PROJECT( ${CPP_WALLET_LIB_NAME} )

include (GenerateExportHeader)

set(CPP_WALLET_EXPORT_NAME ${CPP_WALLET_LIB_NAME}_EXPORT)
set(CPP_WALLET_STATIC_DEFINE ${CPP_WALLET_LIB_NAME}_BUILT_AS_STATIC)
set(CPP_WALLET_EXPORT_FILE_NAME ${CPP_WALLET_LIB_NAME}_export.h)

FILE(GLOB SOURCES *.cpp)
file(GLOB HEADERS *.h)

LIST(APPEND HEADERS
   ${CPP_WALLET_EXPORT_FILE_NAME}
)

INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )

INCLUDE_DIRECTORIES( ${BOTAN_INCLUDE_DIR} )

IF(BSTERMINAL_SHARED_LIBS)
   ADD_LIBRARY(${CPP_WALLET_LIB_NAME} SHARED ${SOURCES} ${HEADERS})
ELSE()
   ADD_LIBRARY(${CPP_WALLET_LIB_NAME} ${SOURCES} ${HEADERS})
ENDIF()

GENERATE_EXPORT_HEADER( ${CPP_WALLET_LIB_NAME}
             BASE_NAME ${CPP_WALLET_LIB_NAME}
             EXPORT_MACRO_NAME ${CPP_WALLET_EXPORT_NAME}
             EXPORT_FILE_NAME ${CPP_WALLET_EXPORT_FILE_NAME}
             STATIC_DEFINE ${CPP_WALLET_STATIC_DEFINE}
)

target_include_directories(
    ${CPP_WALLET_LIB_NAME} PUBLIC
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>"
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
)

TARGET_LINK_LIBRARIES(${CPP_WALLET_LIB_NAME}
   ${CRYPTO_LIB_NAME}
   ${LIBBTC_LIB}
   ${MPIR_LIB}
   ${BOTAN_LIB}
   ${OS_SPECIFIC_LIBS}
   ${COMMON_LIB_NAME}
   ${AUTH_PROTO_LIB_NAME}
   ${BS_PROTO_LIB_NAME}
   Qt5::Core
)
