CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT(${TERMINAL_GUI_QT_NAME})

FILE(GLOB SOURCES
   *.cpp
)
FILE(GLOB HEADERS
   *.h
)

FILE(GLOB UI_FILES
   ${BLOCKSETTLE_UI_INCLUDE_DIR}/BSTerminalMainWindow.ui
#   ${BLOCKSETTLE_UI_INCLUDE_DIR}/CustomControls/*.ui
   ${BLOCKSETTLE_UI_INCLUDE_DIR}/InfoDialogs/*.ui
#   ${BLOCKSETTLE_UI_INCLUDE_DIR}/ManageEncryption/*.ui
#   ${BLOCKSETTLE_UI_INCLUDE_DIR}/Settings/*.ui
#   ${BLOCKSETTLE_UI_INCLUDE_DIR}/Trading/*.ui
   ${BLOCKSETTLE_UI_INCLUDE_DIR}/ChatUI/*.ui
#   ${BLOCKSETTLE_UI_INCLUDE_DIR}/ChatUI/OTCShieldWidgets/*.ui
)

INCLUDE_DIRECTORIES(../../BlockSettleUILib)
INCLUDE_DIRECTORIES(BlockSettleUILib)
INCLUDE_DIRECTORIES(${COMMON_LIB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BOTAN_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${WALLET_LIB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${COMMON_UI_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES(${BS_COMMON_ENUMS_INCLUDE_DIR} )
INCLUDE_DIRECTORIES(${BS_COMMUNICATION_INCLUDE_DIR} )
INCLUDE_DIRECTORIES(${BLOCKSETTLE_UI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Qt5Svg_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Gui_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES(${Qt5Qml_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES(${Qt5DBus_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES(${Qt5Charts_INCLUDE_DIRS} )

qt5_wrap_ui(GENERATED_UI ${UI_FILES})

ADD_LIBRARY(${TERMINAL_GUI_QT_NAME}
   ${SOURCES}
   ${HEADERS}
   ${GENERATED_UI}
)

TARGET_INCLUDE_DIRECTORIES(${TERMINAL_GUI_QT_NAME}
   PUBLIC ${BLOCK_SETTLE_ROOT}/GUI/QtWidgets
   PRIVATE ${BLOCK_SETTLE_ROOT}/Core
   PRIVATE ${BLOCK_SETTLE_ROOT}/common/BlocksettleNetworkingLib
   PRIVATE ${BLOCK_SETTLE_ROOT}/BlockSettleUILib
)

TARGET_LINK_LIBRARIES(${TERMINAL_GUI_QT_NAME}
   ${BLOCKSETTLE_UI_LIBRARY_NAME}
   ${BS_NETWORK_LIB_NAME}
   ${CRYPTO_LIB_NAME}
   Qt5::Network
   Qt5::Core
   Qt5::Widgets
   Qt5::Gui
   Qt5::Network
   Qt5::PrintSupport
   Qt5::Core
   Qt5::Svg
   Qt5::DBus
   ${QT_LIBS}
   ${OS_SPECIFIC_LIBS}
   ${OPENSSL_LIBS}
)
