CMAKE_MINIMUM_REQUIRED( VERSION 3.3 )

SET(PROJ regtestctrl)
PROJECT( ${PROJ} )

FILE(GLOB SOURCES *.cpp)
FILE(GLOB HEADERS *.h)

INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )

ADD_EXECUTABLE( ${PROJ}
   ${SOURCES}
   ${HEADERS}
   )

TARGET_LINK_LIBRARIES( ${PROJ}
   ${CPP_WALLET_LIB_NAME}
   ${CRYPTO_LIB_NAME}
   ${OS_SPECIFIC_LIBS}
   Qt5::Core
   )
