CMAKE_MINIMUM_REQUIRED( VERSION 3.3 )

SET(UNIT_TESTS unit_tests)
PROJECT( ${UNIT_TESTS} )

FILE(GLOB SOURCES *.cpp)
LIST (APPEND SOURCES ../RegtestController/RegtestController.cpp)

FILE(GLOB HEADERS *.h)
LIST (APPEND HEADERS ../RegtestController/RegtestController.h)

INCLUDE_DIRECTORIES( ../RegtestController )
INCLUDE_DIRECTORIES( ${BLOCKSETTLE_UI_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_NETWORK_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )

INCLUDE_DIRECTORIES( ${BS_COMMUNICATION_INCLUDE_DIR} )

INCLUDE_DIRECTORIES( ${PATH_TO_GENERATED} )
INCLUDE_DIRECTORIES( ${NETTY_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_COMMON_ENUMS_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${BS_TERMINAL_API_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${MARKET_ENUMS_INCLUDE_DIR} )

SET(GENERATED_PROTO_FILES
   ${BS_COMMUNICATION_PROTO_SOURCES}
   ${BS_COMMUNICATION_PROTO_HEADERS}
   ${NETTY_PROTO_SOURCES}
   ${NETTY_PROTO_HEADERS}
   ${BS_COMMON_ENUMS_PROTO_SOURCES}
   ${BS_COMMON_ENUMS_PROTO_HEADERS}
   ${BS_TERMINAL_API_PROTO_SOURCES}
   ${BS_TERMINAL_API_PROTO_HEADERS}
   ${MARKET_ENUMS_PROTO_HEADERS}
   )

ADD_EXECUTABLE( ${UNIT_TESTS}
   ${SOURCES}
   ${HEADERS}
   ${GENERATED_PROTO_FILES}
   )

TARGET_LINK_LIBRARIES( ${UNIT_TESTS}
   ${BLOCKSETTLE_UI_LIBRARY_NAME}
   ${BS_NETWORK_LIB_NAME}
   ${CPP_WALLET_LIB_NAME}
   ${CRYPTO_LIB_NAME}
   ${OS_SPECIFIC_LIBS}
   ${ZMQ_LIB}
   ${GTEST_LIB}
   Qt5::Core
   Qt5::Gui
   Qt5::Network
   Qt5::Widgets
   )
